--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,10 @@ Thumbs.db
 # Project specific
 CLAUDE_DEVELOPMENT_NOTES.md
 *.log
+push_to_git.bat
+build.bat
+create_icon.py
+dist/
 
 # Local settings (optional - remove if you want to share settings)
 # settings.json
